--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
-        <h1 class="temp">22&deg;</h1>
+        <h1 class="temp">22&deg;c</h1>
         <h2 class="city">New York</h2>
         <div class="details">
           <div class="col">
@@ -34,5 +34,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
